refactor : 단과대별 학과 목록 변환 mapper에서 수행 (#797)